Added FST waveform dump capability to Verilated simulation
Signed-off-by: Maciej Kurc <mkurc@antmicro.com>

--- a/tools/scripts/Makefile
+++ b/tools/scripts/Makefile
@@ -76,7 +76,7 @@ ifdef debug
  IRUN_DEBUG = -access +rc
  IRUN_DEBUG_RUN = -input $(RV_ROOT)/testbench/input.tcl
  VCS_DEBUG = -debug_access
- VERILATOR_DEBUG = --trace --trace-structs
+ VERILATOR_DEBUG = --trace-fst --trace-structs --trace-threads 2
  RIVIERA_DEBUG = +access +r
 endif
 
