--- a/.github/workflows/build-test-verilator.yml
+++ b/.github/workflows/build-test-verilator.yml
@@ -4,7 +4,7 @@ name: Verilator
 
 on:
   push:
-    branches: ["main", "dev-goog", "dev-msft"]
+    branches: ["main", "dev-goog", "dev-msft", "wkuna/62360-deployable-cov-report"]
   workflow_call:
   workflow_dispatch:
 
@@ -23,7 +23,7 @@ jobs:
   build_tools:
     name: Build Tools
     runs-on: ubuntu-22.04
-    
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -121,7 +121,8 @@ jobs:
     outputs:
       test_names: ${{ steps.output-matrix.outputs.test_names  }}
     env:
-      EXCLUDE_TESTS: "smoke_test_clk_gating, smoke_test_cg_wdt, smoke_test_mbox_cg, smoke_test_kv_cg, smoke_test_doe_cg"
+      # Essentially, execute 'smoke_test_uart' only
+      EXCLUDE_TESTS: "smoke_test_veer, smoke_test_mbox, smoke_test_mbox_cg, smoke_test_sha512, smoke_test_sha256, smoke_test_sha256_wntz, smoke_test_sha256_wntz_rand, smoke_test_sha_accel, memCpy_ROM_to_dccm, memCpy_dccm_to_iccm, hello_world_iccm, iccm_lock, c_intr_handler, smoke_test_ecc, smoke_test_hmac, smoke_test_kv, smoke_test_sram_ecc, smoke_test_ras, smoke_test_trng, smoke_test_qspi, smoke_test_uart, smoke_test_hw_config, smoke_test_kv_uds_reset, smoke_test_kv_securitystate, smoke_test_kv_ecc_flow, smoke_test_kv_hmac_flow, smoke_test_kv_hmac_multiblock_flow, smoke_test_kv_crypto_flow, smoke_test_kv_cg, pv_hash_and_sign, smoke_test_pcr_signing, smoke_test_fw_kv_backtoback_hmac, smoke_test_ecc_errortrigger, smoke_test_pcr_zeroize, smoke_test_ahb_mux, smoke_test_doe_rand, smoke_test_doe_scan, smoke_test_zeroize_crypto, smoke_test_doe_cg, smoke_test_datavault_basic, smoke_test_datavault_reset, smoke_test_datavault_lock, smoke_test_wdt, smoke_test_wdt_rst, smoke_test_cg_wdt, smoke_test_clk_gating, smoke_test_iccm_reset"
     steps:
       - uses: actions/checkout@v3
       - name: Install deps
@@ -142,7 +143,7 @@ jobs:
       fail-fast: false
       matrix:
         test_name: ${{fromJSON(needs.build_matrix.outputs.test_names)}}
-        coverage: ["all", "branch", "toggle"]
+        coverage: ["branch", "toggle"]
 
     steps:
       - uses: actions/checkout@v3
@@ -206,16 +207,17 @@ jobs:
 
       - name: Prepare coverage data
         run: |
-          .github/scripts/convert_coverage_data.sh coverage.dat
+          bash $CALIPTRA_ROOT/.github/scripts/convert_coverage_data.sh coverage.dat
           echo "convert_coverage_data.sh exited with RET_CODE = "$?
           mv coverage.info $CALIPTRA_ROOT/results/coverage_${{ matrix.test_name }}_${{ matrix.coverage }}.info
+          cd ../..
 
       - name: Upload coverage artifacts
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: build_test_verilator_coverage_data
-          path: $CALIPTRA_ROOT/results/*.info
+          path: ./results/*.info
 
   verify_test_results:
     name: Verify Verilator Test Results
@@ -249,5 +251,50 @@ jobs:
       - name: Pack artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: coverage_report
+          name: coverage_dashboard
           path: ./report
+
+
+  generate_webpage:
+    name: Generate Caliptra RTL webpage
+    runs-on: ubuntu-22.04
+    needs: build_and_test
+    steps:
+      - name: Download Coverage Reports
+        uses: actions/download-artifact@v3
+        with:
+          name: build_test_verilator_coverage_data
+          path: ./
+
+      - name: Generate Coverage Dashboard
+        if: github.ref_name == 'main'
+        run: |
+          # TODO: Once deploy URL for the page is known, change '../..' to URL of main index.html page
+          LOGO_SRC=../../../_static/white.svg LOGO_HREF=../../../index.html bash .github/scripts/gen_coverage_reports.sh
+
+      - name: Generate Coverage Dashboard Dev
+        if: github.ref_name != 'main'
+        run: |
+          # TODO: Once deploy URL for the page is known, change '../..' to URL of main index.html page
+          LOGO_SRC=../../../../_static/white.svg LOGO_HREF=../../../../index.html bash .github/scripts/gen_coverage_reports.sh
+
+      - name: Rename Coverage Dashboard
+        run: |
+          mv report coverage_dashboard
+
+      - name: Update webpage
+        if: github.event_name != 'pull_request'
+        run: |
+          .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} 0
+
+      - name: Update webpage PR
+        if: github.event_name == 'pull_request'
+        run: |
+          .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} ${{ github.event.number }}
+
+      - name: Pack artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: webpage
+          path: ./public.new
