gha: Add '--locked' to sccache install
Use exact crate versions specified by Cargo.lock.

Signed-off-by: Wiktoria Kuna <wkuna@antmicro.com>

--- a/.github/workflows/build-test-verilator.yml
+++ b/.github/workflows/build-test-verilator.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install sccache
         if: steps.sccache_bin_restore.outputs.cache-hit != 'true'
         run: |
-          cargo install sccache --version ${SCCACHE_VERSION} --no-default-features --features=gha
+          cargo install sccache --locked --version ${SCCACHE_VERSION} --no-default-features --features=gha
       - name: Save sccache binary
         uses: actions/cache/save@v3
         if: steps.sccache_bin_restore.outputs.cache-hit != 'true'
