--- a/.github/workflows/build-test-verilator.yml
+++ b/.github/workflows/build-test-verilator.yml
@@ -18,6 +18,8 @@ env:
   SCCACHE_GHA_CACHE_FROM: sccache-verilator-
   # Change this to a new random value if you suspect the cache is corrupted
   SCCACHE_C_CUSTOM_CACHE_BUSTER: f3e6951f0c1e
+  LCOV_VERSION: v2.1
+  LCOV_INSTALL_DIR: /opt/lcov
 
 jobs:
   build_tools:
@@ -189,28 +191,24 @@ jobs:
       - name: Run Caliptra Verilator Smoke Test
         run: |
           CALIPTRA_ROOT=$(pwd)
-          mkdir -p $CALIPTRA_ROOT/results
           cd tools/scripts
-          make verilator CALIPTRA_ROOT=$CALIPTRA_ROOT TESTNAME=${{ matrix.test_name  }} COVERAGE=${{ matrix.coverage }}| tee output.log
-
-      - name: Verify Smoke Test Result
-        run: |
-           # Search the last 30 lines of the output for "TESTCASE PASSED"
-           tail -n 30 output.log | grep "TESTCASE PASSED"
-           # grep will return 0 if the search term is found, and 1 otherwise
-           # A non-zero value will cause the github action to fail.
-           ret=$?
-           if [ ret -ne 0 ]
-           then
-             exit ret
-           fi
+          make verilator CALIPTRA_ROOT=$CALIPTRA_ROOT TESTNAME=${{ matrix.test_name  }} COVERAGE=${{ matrix.coverage }} | tee output.log
+          # Search the last 30 lines of the output for "TESTCASE PASSED"
+          tail -n 30 output.log | grep "TESTCASE PASSED"
+          # grep will return 0 if the search term is found, and 1 otherwise
+          # A non-zero value will cause the github action to fail.
+          ret=$?
+          if [ ret -ne 0 ]
+          then
+            exit ret
+          fi
 
       - name: Prepare coverage data
         run: |
-          bash $CALIPTRA_ROOT/.github/scripts/convert_coverage_data.sh coverage.dat
+          bash .github/scripts/convert_coverage_data.sh tools/scripts/coverage.dat
           echo "convert_coverage_data.sh exited with RET_CODE = "$?
-          mv coverage.info $CALIPTRA_ROOT/results/coverage_${{ matrix.test_name }}_${{ matrix.coverage }}.info
-          cd ../..
+          mkdir -p results
+          mv tools/scripts/coverage.info  results/coverage_${{ matrix.test_name }}_${{ matrix.coverage }}.info
 
       - name: Upload coverage artifacts
         if: always()
@@ -233,33 +231,26 @@ jobs:
             exit 1
           fi
 
-  report_coverage:
-    name: Report Verilator Test Coverage
-    runs-on: ubuntu-22.04
-    needs: build_and_test
-    steps:
-      - name: Download Coverage Reports
-        uses: actions/download-artifact@v3
-        with:
-          name: build_test_verilator_coverage_data
-          path: ./
-
-      - name: Generate Reports
-        run: |
-          bash .github/scripts/gen_coverage_reports.sh
-
-      - name: Pack artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage_dashboard
-          path: ./report
-
-
   generate_webpage:
     name: Generate Caliptra RTL webpage
     runs-on: ubuntu-22.04
     needs: build_and_test
     steps:
+      - name: Setup repository
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          sudo apt -qqy update && sudo apt -qqy --no-install-recommends install \
+            cpanminus
+          sudo cpanm Capture::Tiny DateTime DateTime::Format::W3CDTF Devel::Cover \
+            Digest::MD5 File::Spec JSON::XS Memory::Process Time::HiRes Bit::Vector
+
+      - name: Setup lcov
+        run: |
+          git clone https://github.com/linux-test-project/lcov --branch ${{ env.LCOV_VERSION }} --single-branch ${{ env.LCOV_INSTALL_DIR }}
+          echo /opt/lcov/bin >> $GITHUB_PATH
+
       - name: Download Coverage Reports
         uses: actions/download-artifact@v3
         with:
@@ -285,12 +276,12 @@ jobs:
       - name: Update webpage
         if: github.event_name != 'pull_request'
         run: |
-          .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} 0
+          bash .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} 0
 
       - name: Update webpage PR
         if: github.event_name == 'pull_request'
         run: |
-          .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} ${{ github.event.number }}
+          bash .github/scripts/update_webpage.sh ${{ github.ref_name }} ${{ github.event_name }} ${{ github.event.number }}
 
       - name: Pack artifacts
         if: always()
