CI: do not include crypto blocks in coverrage report
Those blocks are formally verified, so we don't need to include them in the
dashboard

Signed-off-by: Karol Gugala <kgugala@antmicro.com>

--- a/.github/workflows/build-test-verilator.yml
+++ b/.github/workflows/build-test-verilator.yml
@@ -291,7 +291,7 @@ jobs:
         if: github.ref_name != 'main'
         run: |
           # TODO: Once deploy URL for the page is known, change '../..' to URL of main index.html page
-          sis reports --report-dir coverage_dashboard --src-path ./src --src-pattern \*src\*/rtl/\*  --logo-src ../../../../_static/white.svg --logo-href ../../../../index.html
+          sis reports --report-dir coverage_dashboard --src-path ./src --src-pattern \*src\*/rtl/\* --src-remove-pattern aes --src-remove-pattern sha256 --src-remove-pattern sha512 --src-remove-pattern doe  --logo-src ../../../../_static/white.svg --logo-href ../../../../index.html
 
       - name: Update webpage
         if: github.event_name != 'pull_request'
