--- a/tools/SiteSpawner/pyproject.toml
+++ b/tools/SiteSpawner/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "gitpython",
     "jinja2",
     "myst-parser",
-    "sphinx",
+    "sphinx < 8.0.0",
     "sphinx_tabs",
     "sphinx-immaterial",
     "sphinxcontrib-mermaid",
